--- a/style.css
+++ b/style.css
@@ -8,4 +8,9 @@
 header{
     background-image: url(./pg-mb/img.png);
     background-size: cover;
+    height: 8.375rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
