--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 :root {
     --grey-800: #1e293b;
     --grey-600: #475569;
+    --purple: #7c3aed;
 }
 
 header{
@@ -39,6 +40,34 @@ main{
     color: var(--grey-600);
 }
 
+.input-box{
+    display: flex;
+    flex-direction: column;
+}
+
+.input-box div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.login a{
+    color: var(--purple);
+    text-decoration: none;
+    font-size: 0.875rem;
+    font-weight: 600;
+}
+
+.login a:hover{
+    text-decoration: underline;
+}
+
+
+.login label{
+    font-size: 0.875rem;
+    color: var(--grey-800);
+    font-weight: 600;
+}
 
 
 
