--- a/style.css
+++ b/style.css
@@ -47,13 +47,13 @@ main{
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .input-box div{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
 }
 
 .login a{
@@ -91,6 +91,7 @@ main{
 
 .login button {
     margin-top: 1rem;
+    margin-bottom: 2rem;
     padding-block: 1rem;
     width: 100%;
     background-color: var(--purple);
@@ -101,4 +102,11 @@ main{
     color: var(--white);
 }
 
+.login > p {
+    color: var(--grey-600);
+}
 
+.login > p a{
+    font-weight: 700;
+    font-size: 1rem;
+}
