--- a/style.css
+++ b/style.css
@@ -104,9 +104,31 @@ main{
 
 .login > p {
     color: var(--grey-600);
+    font-size: 1rem;
 }
 
-.login > p a{
+.login > p a {
     font-weight: 700;
     font-size: 1rem;
+}
+
+@media(min-width: 1000px){
+    header{
+    background: none;
+    justify-content: flex-start;
+    padding-inline: 7rem;
+   }
+
+   header img{
+    width: 10rem;
+   }
+
+   main {
+    padding-inline: 7rem;
+   }
+
+
+
+
+
 }
