--- a/style.css
+++ b/style.css
@@ -112,7 +112,16 @@ main{
     font-size: 1rem;
 }
 
+.bg-desktop{
+    display:none;
+}
+
 @media(min-width: 1000px){
+
+    body{
+        display: flex;
+    }
+    
     header{
     background: none;
     justify-content: flex-start;
@@ -127,7 +136,14 @@ main{
     padding-inline: 7rem;
    }
 
-
+   .bg-desktop{
+    display: block;
+    width: 100%;
+   }
+   
+   .conteudo{
+    width: 100%;
+   }
 
 
 
