--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --grey-200: #e2e8f0;
     --white: #FFF;
     --purple: #7c3aed;
+    --light-purple: #9F67FF;
 }
 
 header{
@@ -112,9 +113,20 @@ main{
     font-size: 1rem;
 }
 
+.login button:hover{
+    background: var(--light-purple);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 .bg-desktop{
     display:none;
 }
+
+
+
+
+
 
 @media(min-width: 1000px){
 
@@ -128,6 +140,7 @@ main{
     margin: 2.5rem 7rem 7rem;
 
     height: fit-content;
+  
    }
 
    header img{
@@ -147,8 +160,17 @@ main{
    
    .conteudo{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
    }
 
-
+   .descricao h1{
+    font-size: 2.25rem;
+   }
+   
+   .descricao p{
+    font-size: 1rem;
+   }
 
 }
