--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     --light-purple: #9F67FF;
 }
 
+
 header{
     background-image: url(./pg-mb/img.png);
     background-size: cover;
@@ -132,6 +133,7 @@ main{
 
     body{
         display: flex;
+        height: 100vh;
     }
     
     header{
@@ -156,6 +158,12 @@ main{
    .bg-desktop{
     display: block;
     width: 100%;
+   }
+
+   .bg-desktop img{
+    display: block;
+    width: 100%;
+    height: 100%;
    }
    
    .conteudo{
